fix: overflow scroll

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -19,6 +19,7 @@ body::after {
     position: absolute;
     z-index: -1;
     inset: 0;
+    overflow: hidden;
 }
 
 header,
